# nadaquote

./: .gitignore  CMakeLists.txt  README.md
libs/: CMakeLists.txt  download_libraries.py  imconfig-SFML.h
src/: web.cpp  web.hpp
test/: test_quote.hpp  tests.cpp
